[package]
name = "arb"
version = "0.4.0"
authors = ["Adrian Kumpf <adrian.kumpf@posteo.de>"]
license = "MIT"
build = "build.rs"
edition = "2018"

[lib]
name = "arb"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.6.0"
arb = { git = "https://github.com/adriankumpf/abacom-relay-board", tag = 'v0.5.0' }
